TUSCANY-1237 - Submitting Ron's patch.
git-svn-id: https://svn.apache.org/repos/asf/incubator/tuscany/java/das@557695 13f79535-47bb-0310-9956-ffa450edef68