@@ -28,7 +28,7 @@ public class ManagedParameterImpl extends ParameterImpl {
 
     private Object updateValue(Object oldValue) {
         if (oldValue instanceof Integer) {
-            return Integer.valueOf(((Integer) oldValue).intValue() + 1);
+            return new Integer(((Integer) oldValue).intValue() + 1);
         } else if (oldValue instanceof BigDecimal) {
             return ((BigDecimal) oldValue).add(new BigDecimal(1));
         } else {
