@@ -46,8 +46,8 @@ public class CompoundKeyTests extends DasTest {
         DAS das = DAS.FACTORY.createDAS(getConnection());
         Command getOrderDetails = das.createCommand("Select * from ORDERDETAILS where ORDERID = ? AND PRODUCTID = ?");
 
-        getOrderDetails.setParameter(1, Integer.valueOf(1));
-        getOrderDetails.setParameter(2, Integer.valueOf(1));
+        getOrderDetails.setParameter(1, new Integer(1));
+        getOrderDetails.setParameter(2, new Integer(1));
 
         DataObject root = getOrderDetails.executeQuery();
 
@@ -96,8 +96,8 @@ public class CompoundKeyTests extends DasTest {
         DAS das = DAS.FACTORY.createDAS(getConfig("OrdersOrderDetailsConfig.xml"), getConnection());
         Command getOrderDetails = das.createCommand("Select * from ORDERDETAILS where ORDERID = ? AND PRODUCTID = ?");
 
-        getOrderDetails.setParameter(1, Integer.valueOf(1));
-        getOrderDetails.setParameter(2, Integer.valueOf(1));
+        getOrderDetails.setParameter(1, new Integer(1));
+        getOrderDetails.setParameter(2, new Integer(1));
 
         DataObject root = getOrderDetails.executeQuery();
 
