@@ -77,9 +77,9 @@ public class CorrectedDefectTests extends DasTest {
         // Create a new Order and add to customer1
         DataObject order = root.createDataObject("ANORDER");
 
-        order.set("ID", Integer.valueOf(99));
+        order.set("ID", new Integer(99));
         order.set("PRODUCT", "The 99th product");
-        order.set("QUANTITY", Integer.valueOf(99));
+        order.set("QUANTITY", new Integer(99));
         cust.getList("orders").add(order);
 
         assertEquals(custOrderCount + 1, cust.getList("orders").size());
@@ -91,7 +91,7 @@ public class CorrectedDefectTests extends DasTest {
         select = das.createCommand("SELECT * FROM CUSTOMER LEFT JOIN ANORDER "
                 + "ON CUSTOMER.ID = ANORDER.CUSTOMER_ID where CUSTOMER.ID = ?");
 
-        select.setParameter(1, Integer.valueOf(custID));
+        select.setParameter(1, new Integer(custID));
         root = select.executeQuery();
 
         assertEquals(custOrderCount + 1, root.getList("CUSTOMER[1]/orders").size());
@@ -109,7 +109,7 @@ public class CorrectedDefectTests extends DasTest {
 
         DAS das = DAS.FACTORY.createDAS(getConnection());
         Command insert = das.createCommand(sql);
-        insert.setParameter(1, Integer.valueOf(316405209));
+        insert.setParameter(1, new Integer(316405209));
         insert.setParameter(2, "2005-11-23 19:29:52.636");
         insert.execute();
 
@@ -131,7 +131,7 @@ public class CorrectedDefectTests extends DasTest {
         int numCustomers = root.getList("CUSTOMER").size();
 
         DataObject newCust = root.createDataObject("CUSTOMER");
-        newCust.set("ID", Integer.valueOf(100));
+        newCust.set("ID", new Integer(100));
         newCust.set("ADDRESS", "5528 Wells Fargo Drive");
         newCust.set("LASTNAME", "Gerkin");
 
@@ -153,7 +153,7 @@ public class CorrectedDefectTests extends DasTest {
     public void testDiltonsNullParameterBug1() throws Exception {
         DAS das = DAS.FACTORY.createDAS(getConnection());
         Command insert = das.createCommand("insert into CUSTOMER values (?, ?, ?)");
-        insert.setParameter(1, Integer.valueOf(10));
+        insert.setParameter(1, new Integer(10));
         insert.setParameter(2, null);
         insert.setParameter(3, "5528 Wells Fargo Dr");
         insert.execute();
@@ -172,7 +172,7 @@ public class CorrectedDefectTests extends DasTest {
     public void testDiltonsNullParameterBug2() throws Exception {
         DAS das = DAS.FACTORY.createDAS(getConnection());
         Command insert = das.createCommand("insert into CUSTOMER values (?, ?, ?)");
-        insert.setParameter(1, Integer.valueOf(10));
+        insert.setParameter(1, new Integer(10));
         // insert.setParameterValue("LASTNAME", null);
         insert.setParameter(3, "5528 Wells Fargo Dr");
 
@@ -190,7 +190,7 @@ public class CorrectedDefectTests extends DasTest {
     public void testDiltonsNullParameterBug3() throws Exception {
         DAS das = DAS.FACTORY.createDAS(getConnection());
         Command insert = das.createCommand("insert into CUSTOMER values (?, ?, ?)");
-        insert.setParameter(1, Integer.valueOf(10));
+        insert.setParameter(1, new Integer(10));
         insert.setParameter(2, "");
         insert.setParameter(3, "5528 Wells Fargo Dr");
         insert.execute();
@@ -238,7 +238,7 @@ public class CorrectedDefectTests extends DasTest {
     public void testYingChen12162005() throws Exception {
         DAS das = DAS.FACTORY.createDAS(getConnection());
         Command insert = das.createCommand("insert into CUSTOMER values (?, ?, ?)");
-        insert.setParameter(1, Integer.valueOf(10));
+        insert.setParameter(1, new Integer(10));
         insert.setParameter(2, "Williams");
         insert.setParameter(3, null);
         insert.execute();
