@@ -72,8 +72,8 @@ public class MySQLSetup extends DatabaseSetup {
                 s.execute(statements[i]);
             } catch (SQLException e) {
                 // If the table does not exist then ignore the exception on drop
-                if ((!e.getMessage().contains("does not exist")) && (!e.getMessage().contains("Unknown table")) 
-                        && (!e.getMessage().contains("42704"))) {
+                if ((!(e.getMessage().indexOf("does not exist") >= 0)) && (!(e.getMessage().indexOf("Unknown table") >= 0)) 
+                        && (!(e.getMessage().indexOf("42704") >= 0))) {
                     throw new RuntimeException(e);
                 }
             }
@@ -90,8 +90,8 @@ public class MySQLSetup extends DatabaseSetup {
                 s.execute(statements[i]);
             } catch (SQLException e) {
                 // If the table does not exist then ignore the exception on drop
-                if ((!e.getMessage().contains("does not exist")) && (!e.getMessage().contains("Unknown table")) 
-                        && (!e.getMessage().contains("42704"))) {
+                if ((!(e.getMessage().indexOf("does not exist") >= 0)) && (!(e.getMessage().indexOf("Unknown table") >= 0)) 
+                        && (!(e.getMessage().indexOf("42704") >= 0))) {
                     throw new RuntimeException(e);
                 }
             }
@@ -125,7 +125,7 @@ public class MySQLSetup extends DatabaseSetup {
                 s.execute(statements[i]);
             } catch (SQLException e) {
                 // If the proc does not exist then ignore the exception on drop
-                if (!e.getMessage().contains("does not exist") && !e.getMessage().contains("42704")) {
+                if (!(e.getMessage().indexOf("does not exist") >= 0) && !(e.getMessage().indexOf("42704") >= 0)) {
                     throw new RuntimeException(e);
                 }
             }
@@ -171,7 +171,7 @@ public class MySQLSetup extends DatabaseSetup {
     }
 
     protected String getStringColumn(String name, int length) {
-        return name + ' ' + stringType + "(" + Integer.valueOf(length).toString() + ")";
+        return name + ' ' + stringType + "(" + new Integer(length).toString() + ")";
     }
 
     protected String getIntegerColumn(String name) {
@@ -179,8 +179,8 @@ public class MySQLSetup extends DatabaseSetup {
     }
 
     protected String getDecimalColumn(String name, int size1, int size2) {
-        return name + ' ' + decimalType + "(" + Integer.valueOf(size1).toString() + ',' 
-            + Integer.valueOf(size2).toString() + ")";
+        return name + ' ' + decimalType + "(" + new Integer(size1).toString() + ',' 
+            + new Integer(size2).toString() + ")";
     }
 
     protected String getFloatColumn(String name) {
